# study_bluetooth_socket_connector

./: CMakeLists_tizen.txt  CMakeLists_x86.txt  README.md  Util-Conf.cmake
Scripts/: bt_g850_reset.sh
Tools/: CMakeLists.txt
Tools/BluetoothSocket/: CMakeLists.txt
Tools/BluetoothSocket/RFCOMM/: CMakeLists.txt
Tools/BluetoothSocket/RFCOMM/Implementation/: rfcomm-client.cpp  rfcomm-server.cpp
Tools/HciSimpleScan/: CMakeLists.txt
Tools/HciSimpleScan/Implementation/: simplescan.cpp
Tools/LocationTransferProtocol/: CMakeLists.txt
Tools/LocationTransferProtocol/Implementation/: LtpBluetoothSocketClient.cpp  LtpBluetoothSocketServer.cpp  LtpCommon.cpp  LtpConnection.cpp  LtpDummyCloudConnector.cpp  LtpDummyLocationProvider.cpp  LtpIpSocketClient.cpp  LtpIpSocketServer.cpp  LtpRpcOverSpp.cpp  LtpUserDataConnector.cpp  LtpUserDataService.cpp
Tools/LocationTransferProtocol/Imports/: CMakeLists.txt
Tools/LocationTransferProtocol/Imports/Logging/: CMakeLists.txt
Tools/LocationTransferProtocol/Imports/Unittest/: CMakeLists.txt
Tools/LocationTransferProtocol/Interface/: ILtpSocketClient.h  ILtpSocketServer.h  LtpBluetoothSocket.h  LtpBluetoothSocketClient.h  LtpBluetoothSocketServer.h  LtpCommon.h  LtpConnection.h  LtpDummyCloudConnector.h  LtpDummyLocationProvider.h  LtpExceptions.h  LtpIpSocket.h  LtpIpSocketClient.h  LtpIpSocketServer.h  LtpLocationProvider.h  LtpRpcOverSpp.h  LtpUserDataConnector.h  LtpUserDataService.h
Tools/LocationTransferProtocol/Test/: CMakeLists.txt
Tools/LocationTransferProtocol/Test/Demo/: CMakeLists.txt  LtpDemo.cpp
Tools/LocationTransferProtocol/Test/Unittest/: CMakeLists.txt
Tools/LocationTransferProtocol/Test/Unittest/Common/: CMakeLists.txt  LtpCommonTest.cpp
Tools/LocationTransferProtocol/Test/Unittest/Connection/: CMakeLists.txt  LtpConnectionTest.cpp
Tools/LocationTransferProtocol/Test/Unittest/MockInterface/: MockILtpConnectionListener.h  MockILtpRpcOverSppListener.h  MockILtpUserDataConnectorListener.h
Tools/LocationTransferProtocol/Test/Unittest/RpcOverSpp/: CMakeLists.txt  LtpRpcOverSppTest.cpp
Tools/LocationTransferProtocol/Test/Unittest/UserDataConnector/: CMakeLists.txt  LtpUserDataConnectorTest.cpp
Tools/LocationTransferProtocol/Test/Unittest/UserDataService/: CMakeLists.txt  LtpUserDataServiceTest.cpp
Tools/RJDoc/: CMakeLists.txt
Tools/RJDoc/Implementation/: RJDoc.cpp  RJDoc.h  RJDocUnittest.cpp  UseRJDoc.cpp  minimal.json
